@startuml

!include style.puml

skinparam arrowThickness 1.1
skinparam arrowColor #black
skinparam classBackgroundColor MODEL_COLOR
skinparam classBorderColor MODEL_COLOR_T1

Interface Model <<Interface>> MODEL_COLOR
Interface ScheduleModel <<Interface>> MODEL_COLOR
class ScheduleModelManager MODEL_COLOR
Interface FlashcardModel <<Interface>> MODEL_COLOR
class FlashcardModelManager MODEL_COLOR
Interface QuizModel <<Interface>> MODEL_COLOR
class QuizModelManager MODEL_COLOR

Model --|> ScheduleModel
Model --|> FlashcardModel
Model --|> QuizModel

ScheduleModel <|.. ScheduleModelManager
FlashcardModel <|.. FlashcardModelManager
QuizModel <|.. QuizModelManager


@enduml
